small fixes in sentiment analysis

--- a/sentiment_analysis.ipynb
+++ b/sentiment_analysis.ipynb
@@ -1614,7 +1614,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The `preprocess_text` function is highly customizable and can be tested with different kinds of parameter combinations, in order to achieve the best results with problem at hand.\n",
+    "The `preprocess_text` function is highly customizable and can be tested with different kinds of parameter combinations, in order to achieve the best results with the problem at hand.\n",
     "\n",
     "In particular, extensive testing shows the following:\n",
     "- Regular expressions do not seem to reflect in better evaluation metric\n",
@@ -1891,7 +1891,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Just out of curiosity, let's how the baseline measures change when training without duplicates.."
+    "Just out of curiosity, let's see how the baseline measures change when training without duplicates.."
    ]
   },
   {
