add distributed representations notebook / add utils module

--- a/sentiment_analysis.ipynb
+++ b/sentiment_analysis.ipynb
@@ -18,14 +18,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 4,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2020-10-24T13:31:43.195064Z",
-     "iopub.status.busy": "2020-10-24T13:31:43.194678Z",
-     "iopub.status.idle": "2020-10-24T13:31:43.274424Z",
-     "shell.execute_reply": "2020-10-24T13:31:43.273363Z",
-     "shell.execute_reply.started": "2020-10-24T13:31:43.195014Z"
+     "iopub.execute_input": "2020-11-05T15:45:15.916233Z",
+     "iopub.status.busy": "2020-11-05T15:45:15.915808Z",
+     "iopub.status.idle": "2020-11-05T15:45:15.930944Z",
+     "shell.execute_reply": "2020-11-05T15:45:15.929859Z",
+     "shell.execute_reply.started": "2020-11-05T15:45:15.916188Z"
     }
    },
    "outputs": [],
@@ -38,13 +38,13 @@
     "from functools import partial\n",
     "\n",
     "import matplotlib.pyplot as plt\n",
-    "import nltk\n",
     "import numpy as np\n",
     "import pandas as pd\n",
+    "import nltk\n",
     "from nltk.corpus import stopwords\n",
     "from nltk.sentiment.util import mark_negation\n",
     "from nltk.tokenize import word_tokenize\n",
-    "from sklearn.pipeline import Pipeline, FeatureUnion\n",
+    "from sklearn.pipeline import Pipeline\n",
     "from sklearn.feature_selection import SelectKBest, chi2\n",
     "from sklearn.preprocessing import Normalizer\n",
     "from sklearn.model_selection import GridSearchCV\n",
@@ -62,21 +62,27 @@
     ")\n",
     "from sklearn.linear_model import (\n",
     "    LogisticRegression,\n",
-    "    Perceptron,\n",
     "    PassiveAggressiveClassifier,\n",
-    "    SGDClassifier,\n",
     "    RidgeClassifier,\n",
     ")\n",
-    "from sklearn.naive_bayes import MultinomialNB\n",
     "from sklearn.neighbors import KNeighborsClassifier\n",
-    "from sklearn.svm import LinearSVC, SVC\n",
-    "from sklearn.ensemble import BaggingClassifier"
+    "from sklearn.svm import LinearSVC\n",
+    "\n",
+    "import utils"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
-   "metadata": {},
+   "execution_count": 5,
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2020-11-05T15:45:18.839552Z",
+     "iopub.status.busy": "2020-11-05T15:45:18.839109Z",
+     "iopub.status.idle": "2020-11-05T15:45:19.136544Z",
+     "shell.execute_reply": "2020-11-05T15:45:19.135210Z",
+     "shell.execute_reply.started": "2020-11-05T15:45:18.839504Z"
+    }
+   },
    "outputs": [
     {
      "name": "stderr",
@@ -96,7 +102,7 @@
        "True"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -109,14 +115,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2020-10-24T11:44:13.080731Z",
-     "iopub.status.busy": "2020-10-24T11:44:13.080353Z",
-     "iopub.status.idle": "2020-10-24T11:44:13.087505Z",
-     "shell.execute_reply": "2020-10-24T11:44:13.086407Z",
-     "shell.execute_reply.started": "2020-10-24T11:44:13.080680Z"
+     "iopub.execute_input": "2020-11-05T15:45:20.569254Z",
+     "iopub.status.busy": "2020-11-05T15:45:20.568729Z",
+     "iopub.status.idle": "2020-11-05T15:45:20.574848Z",
+     "shell.execute_reply": "2020-11-05T15:45:20.573613Z",
+     "shell.execute_reply.started": "2020-11-05T15:45:20.569197Z"
     }
    },
    "outputs": [],
@@ -140,119 +146,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 9,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2020-10-24T11:44:15.626500Z",
-     "iopub.status.busy": "2020-10-24T11:44:15.626057Z",
-     "iopub.status.idle": "2020-10-24T11:44:15.636782Z",
-     "shell.execute_reply": "2020-10-24T11:44:15.635332Z",
-     "shell.execute_reply.started": "2020-10-24T11:44:15.626454Z"
+     "iopub.execute_input": "2020-11-05T15:46:49.404099Z",
+     "iopub.status.busy": "2020-11-05T15:46:49.403681Z",
+     "iopub.status.idle": "2020-11-05T15:46:49.579799Z",
+     "shell.execute_reply": "2020-11-05T15:46:49.578394Z",
+     "shell.execute_reply.started": "2020-11-05T15:46:49.404054Z"
     }
    },
    "outputs": [],
    "source": [
-    "# Set the dataset name and URL\n",
-    "dataset_name = \"imdb\"\n",
-    "dataset_url = \"http://ai.stanford.edu/~amaas/data/sentiment/aclImdb_v1.tar.gz\"\n",
-    "\n",
-    "# Create the dataset folder\n",
-    "dataset_folder = os.path.join(os.getcwd(), \"datasets\", dataset_name)\n",
-    "original_dataset_folder = os.path.join(dataset_folder, \"original\")\n",
-    "if not os.path.exists(original_dataset_folder):\n",
-    "    os.makedirs(original_dataset_folder)\n",
-    "\n",
-    "# Create the dataframe folder\n",
-    "df_folder = os.path.join(dataset_folder, \"dataframe\")\n",
-    "if not os.path.exists(df_folder):\n",
-    "    os.makedirs(df_folder)\n",
-    "dataframe_path = os.path.join(df_folder, dataset_name + \".pkl\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Dataset already downloaded and extracted\n"
-     ]
-    }
-   ],
-   "source": [
-    "# Download and extract the dataset\n",
-    "original_dataset_path = os.path.join(original_dataset_folder, \"movies.tar.gz\")\n",
-    "if not os.path.exists(original_dataset_path):\n",
-    "    urllib.request.urlretrieve(dataset_url, original_dataset_path)\n",
-    "    print(\"Successful download\")\n",
-    "    tar = tarfile.open(original_dataset_path)\n",
-    "    tar.extractall(original_dataset_folder)\n",
-    "    extracted_folder_name = tar.getnames()[0]\n",
-    "    tar.close()\n",
-    "    print(\"Successful extraction\")\n",
-    "else:\n",
-    "    print(\"Dataset already downloaded and extracted\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Dataframe already saved as a pickle file\n"
-     ]
-    }
-   ],
-   "source": [
-    "if not os.path.exists(dataframe_path):\n",
-    "    dataframe_rows = []\n",
-    "    for split in [\"train\", \"test\"]:\n",
-    "        for sentiment in [\"pos\", \"neg\"]:\n",
-    "            folder = os.path.join(original_dataset_folder, \"aclImdb\", split, sentiment)\n",
-    "            for filename in os.listdir(folder):\n",
-    "                file_path = os.path.join(folder, filename)\n",
-    "                try:\n",
-    "                    if os.path.isfile(file_path):\n",
-    "                        with open(file_path, mode=\"r\", encoding=\"utf-8\") as text_file:\n",
-    "                            # Extract info\n",
-    "                            text = text_file.read()\n",
-    "                            score = filename.split(\"_\")[1].split(\".\")[0]\n",
-    "                            file_id = filename.split(\"_\")[0]\n",
-    "\n",
-    "                            # Compute sentiment\n",
-    "                            num_sentiment = (\n",
-    "                                1 if sentiment == \"pos\"\n",
-    "                                else 0 if sentiment == \"neg\"\n",
-    "                                else -1\n",
-    "                            )\n",
-    "\n",
-    "                            # Create single dataframe row\n",
-    "                            dataframe_row = {\n",
-    "                                \"file_id\": file_id,\n",
-    "                                \"score\": score,\n",
-    "                                \"sentiment\": num_sentiment,\n",
-    "                                \"split\": split,\n",
-    "                                \"text\": text,\n",
-    "                            }\n",
-    "                            dataframe_rows.append(dataframe_row)\n",
-    "                except Exception as e:\n",
-    "                    print(\"Failed to process %s. Reason: %s\" % (file_path, e))\n",
-    "                    sys.exit(0)\n",
-    "\n",
-    "    # Transform the list of rows in a proper dataframe\n",
-    "    dataframe = pd.DataFrame(dataframe_rows)\n",
-    "    dataframe_cols = [\"file_id\", \"score\", \"sentiment\", \"split\", \"text\"]\n",
-    "    dataframe = dataframe[dataframe_cols]\n",
-    "    dataframe.to_pickle(dataframe_path)\n",
-    "else:\n",
-    "    print(\"Dataframe already saved as a pickle file\")"
+    "dataset = utils.IMDBDataset()\n",
+    "df = dataset.dataframe"
    ]
   },
   {
@@ -264,14 +171,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 10,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2020-10-24T11:44:20.799948Z",
-     "iopub.status.busy": "2020-10-24T11:44:20.799441Z",
-     "iopub.status.idle": "2020-10-24T11:44:21.075801Z",
-     "shell.execute_reply": "2020-10-24T11:44:21.074108Z",
-     "shell.execute_reply.started": "2020-10-24T11:44:20.799900Z"
+     "iopub.execute_input": "2020-11-05T15:46:50.316299Z",
+     "iopub.status.busy": "2020-11-05T15:46:50.315875Z",
+     "iopub.status.idle": "2020-11-05T15:46:50.382674Z",
+     "shell.execute_reply": "2020-11-05T15:46:50.381333Z",
+     "shell.execute_reply.started": "2020-11-05T15:46:50.316254Z"
     }
    },
    "outputs": [
@@ -364,13 +271,12 @@
        "4  \"Opening Night\" released in 1977, tries to be ...  "
       ]
      },
-     "execution_count": 5,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df = pd.read_pickle(dataframe_path)\n",
     "df[\"score\"] = pd.to_numeric(df[\"score\"])\n",
     "df.head()"
    ]
