continue with distributed representations

--- a/sentiment_analysis.ipynb
+++ b/sentiment_analysis.ipynb
@@ -73,48 +73,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {
-    "execution": {
-     "iopub.execute_input": "2020-11-05T15:45:18.839552Z",
-     "iopub.status.busy": "2020-11-05T15:45:18.839109Z",
-     "iopub.status.idle": "2020-11-05T15:45:19.136544Z",
-     "shell.execute_reply": "2020-11-05T15:45:19.135210Z",
-     "shell.execute_reply.started": "2020-11-05T15:45:18.839504Z"
-    }
-   },
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "[nltk_data] Downloading package stopwords to /root/nltk_data...\n",
-      "[nltk_data]   Package stopwords is already up-to-date!\n",
-      "[nltk_data] Downloading package punkt to /root/nltk_data...\n",
-      "[nltk_data]   Package punkt is already up-to-date!\n",
-      "[nltk_data] Downloading package wordnet to /root/nltk_data...\n",
-      "[nltk_data]   Package wordnet is already up-to-date!\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "True"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "nltk.download(\"stopwords\")\n",
-    "nltk.download(\"punkt\")\n",
-    "nltk.download(\"wordnet\")"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 6,
    "metadata": {
     "execution": {
@@ -127,7 +85,8 @@
    },
    "outputs": [],
    "source": [
-    "RANDOM_SEED = 42"
+    "RANDOM_SEED = 42\n",
+    "np.random.seed(RANDOM_SEED)"
    ]
   },
   {
@@ -1512,15 +1471,14 @@
     }
    ],
    "source": [
-    "EN_STOPWORDS = set(stopwords.words(\"english\"))\n",
-    "print(f\"Stopwords ({len(EN_STOPWORDS)}): {EN_STOPWORDS}\")"
+    "print(f\"Stopwords ({len(utils.EN_STOPWORDS)}): {utils.EN_STOPWORDS}\")"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The `preprocess_text` function is highly customizable and can be tested with different kinds of parameter combinations, in order to achieve the best results with the problem at hand.\n",
+    "The `preprocess_text` function (available in the `utils` module and reported below for clarity) is highly customizable and can be tested with different kinds of parameter combinations, in order to achieve the best results with the problem at hand.\n",
     "\n",
     "In particular, extensive testing shows the following:\n",
     "- Regular expressions do not seem to reflect in better evaluation metric\n",
@@ -1532,19 +1490,10 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 30,
-   "metadata": {
-    "execution": {
-     "iopub.execute_input": "2020-10-24T13:05:20.754097Z",
-     "iopub.status.busy": "2020-10-24T13:05:20.753660Z",
-     "iopub.status.idle": "2020-10-24T13:05:20.776233Z",
-     "shell.execute_reply": "2020-10-24T13:05:20.774673Z",
-     "shell.execute_reply.started": "2020-10-24T13:05:20.754052Z"
-    }
-   },
-   "outputs": [],
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
+    "```python\n",
     "STEMMER = nltk.porter.PorterStemmer()\n",
     "LEMMATIZER = nltk.wordnet.WordNetLemmatizer()\n",
     "\n",
@@ -1605,7 +1554,8 @@
     "    if start_end_symbols:\n",
     "        text = [\"<s>\"] + text + [\"</s>\"]\n",
     "    # Return the text as a string\n",
-    "    return \" \".join(text)"
+    "    return \" \".join(text)\n",
+    "```"
    ]
   },
   {
@@ -1631,7 +1581,7 @@
    "source": [
     "preprocessing_funcs = [\n",
     "    partial(\n",
-    "        preprocess_text,\n",
+    "        utils.preprocess_text,\n",
     "        regexes=False,\n",
     "        start_end_symbols=True,\n",
     "        mark_neg=False,\n",
@@ -1641,7 +1591,7 @@
     "        root=None,\n",
     "    ),\n",
     "    partial(\n",
-    "        preprocess_text,\n",
+    "        utils.preprocess_text,\n",
     "        regexes=True,\n",
     "        start_end_symbols=True,\n",
     "        mark_neg=False,\n",
@@ -1651,7 +1601,7 @@
     "        root=None,\n",
     "    ),\n",
     "    partial(\n",
-    "        preprocess_text,\n",
+    "        utils.preprocess_text,\n",
     "        regexes=True,\n",
     "        start_end_symbols=True,\n",
     "        mark_neg=False,\n",
@@ -1705,7 +1655,7 @@
     "print(df['text'].iloc[rnd_text])\n",
     "print()\n",
     "print(\"After pre-processing:\")\n",
-    "print(preprocess_text(df['text'].iloc[rnd_text]))"
+    "print(utils.preprocess_text(df['text'].iloc[rnd_text]))"
    ]
   },
   {
@@ -1938,7 +1888,7 @@
     "            \"vect\",\n",
     "            CountVectorizer(\n",
     "                ngram_range=(1, 2),\n",
-    "                preprocessor=preprocess_text,\n",
+    "                preprocessor=utils.preprocess_text,\n",
     "                min_df=0.01,\n",
     "                max_df=0.7,\n",
     "            ),\n",
