add more comments to distributed representations notebook

--- a/sentiment_analysis.ipynb
+++ b/sentiment_analysis.ipynb
@@ -1494,21 +1494,10 @@
    "metadata": {},
    "source": [
     "```python\n",
-    "STEMMER = nltk.porter.PorterStemmer()\n",
-    "LEMMATIZER = nltk.wordnet.WordNetLemmatizer()\n",
-    "\n",
-    "\n",
-    "def stem_text(text):\n",
-    "    return [STEMMER.stem(word) for word in text]\n",
-    "\n",
-    "\n",
-    "def lemmatize_text(text):\n",
-    "    return [LEMMATIZER.lemmatize(word) for word in text]\n",
-    "\n",
-    "\n",
     "def preprocess_text(\n",
     "    text,\n",
-    "    regexes=True,\n",
+    "    space_regexes=None,\n",
+    "    empty_regexes=None,\n",
     "    start_end_symbols=True,\n",
     "    mark_neg=False,\n",
     "    remove_punct=False,\n",
@@ -1516,25 +1505,33 @@
     "    min_chars=None,\n",
     "    root=None,\n",
     "):\n",
+    "    '''\n",
+    "    Highly-customizable text preprocessing function\n",
+    "    '''\n",
+    "    \n",
+    "    def stem_text(text):\n",
+    "        return [STEMMER.stem(word) for word in text]\n",
+    "\n",
+    "    def lemmatize_text(text):\n",
+    "        return [LEMMATIZER.lemmatize(word) for word in text]\n",
+    "    \n",
     "    # Strip trailing spaces and remove newlines\n",
     "    text = text.strip().replace(\"\\n\", \" \").replace(\"\\r\", \" \")\n",
     "    # Convert to lowercase\n",
     "    text = text.lower()\n",
-    "    # Apply regular expressions\n",
-    "    if regexes:\n",
-    "        # Remove HTML tags\n",
-    "        text = re.sub(HTML_RE, \"\", text)\n",
-    "        # Remove text in square brackets\n",
-    "        text = re.sub(BRACKETS_RE, \"\", text)\n",
-    "        # Remove dates\n",
-    "        text = re.sub(DATE_RE, \"\", text)\n",
-    "        # Remove floating numbers\n",
-    "        text = re.sub(FLOAT_RE, \"\", text)\n",
+    "    # Apply regular expressions and substitute with space\n",
+    "    if space_regexes is not None:\n",
+    "        for space_regex in space_regexes:\n",
+    "            text = re.sub(space_regex, \" \", text)\n",
+    "    # Apply regular expressions and substitute with empty string\n",
+    "    if empty_regexes is not None:\n",
+    "        for empty_regex in empty_regexes:\n",
+    "            text = re.sub(empty_regex, \"\", text)\n",
     "    # Mark negation\n",
     "    if mark_neg:\n",
     "        text = \" \".join(mark_negation(text.split(), double_neg_flip=False))\n",
     "        EN_STOPWORDS.add(\"_NEG\")\n",
-    "    # Remove punctuation\n",
+    "    # Remove every punctuation\n",
     "    if remove_punct:\n",
     "        text = re.sub(PUNCTUATION_RE, \"\", text)\n",
     "    # Leave single whitespace\n",
@@ -1582,7 +1579,6 @@
     "preprocessing_funcs = [\n",
     "    partial(\n",
     "        utils.preprocess_text,\n",
-    "        regexes=False,\n",
     "        start_end_symbols=True,\n",
     "        mark_neg=False,\n",
     "        remove_punct=False,\n",
@@ -1592,7 +1588,7 @@
     "    ),\n",
     "    partial(\n",
     "        utils.preprocess_text,\n",
-    "        regexes=True,\n",
+    "        empty_regexes=[HTML_RE, BRACKETS_RE, DATE_RE, FLOAT_RE]\n",
     "        start_end_symbols=True,\n",
     "        mark_neg=False,\n",
     "        remove_punct=False,\n",
@@ -1602,7 +1598,7 @@
     "    ),\n",
     "    partial(\n",
     "        utils.preprocess_text,\n",
-    "        regexes=True,\n",
+    "        empty_regexes=[HTML_RE, BRACKETS_RE, DATE_RE, FLOAT_RE]\n",
     "        start_end_symbols=True,\n",
     "        mark_neg=False,\n",
     "        remove_punct=True,\n",
