some corrections to distributed representations notebook

--- a/distributed_representations.ipynb
+++ b/distributed_representations.ipynb
@@ -420,7 +420,9 @@
     "Moreover, the function will also output two more data structures, which will be used throughout the notebook for convenience:\n",
     "\n",
     "- Index to word dictionary: {0: \"alessio\", 1: \"are\", 2: \"hi\", 3: \"how\", 4: \"is\", 5: \"lorenzo\", 6: \"my\", 7: \"name\", 8: \"who\", 9: \"you\"}\n",
-    "- Word to index dictionary: {\"alessio\": 0, \"are\": 1, \"hi\": 2, \"how\": 3, \"is\": 4, \"lorenzo\": 5, \"my\": 6, \"name\": 7, \"who\": 8, \"you\": 9}"
+    "- Word to index dictionary: {\"alessio\": 0, \"are\": 1, \"hi\": 2, \"how\": 3, \"is\": 4, \"lorenzo\": 5, \"my\": 6, \"name\": 7, \"who\": 8, \"you\": 9}\n",
+    "\n",
+    "**Important**: The most important thing to remember is that the vocabulary should always be the same one. Thus, we have to make sure that the vocabulary creation routine always returns the same result."
    ]
   },
   {
@@ -625,7 +627,7 @@
    },
    "outputs": [],
    "source": [
-    "def cosine_similarity(p, q, transpose_p=False, transpose_q=False):\n",
+    "def cosine_similarity(p, q, transpose_p=False, transpose_q=False, to_dense=False):\n",
     "    \"\"\"\n",
     "    Computes the cosine similarity of two d-dimensional matrices,\n",
     "    where their second dimension should match\n",
@@ -653,8 +655,8 @@
     "        res = q.dot(p.T) / norms_prod\n",
     "    else:\n",
     "        res = p.dot(q.T) / norms_prod\n",
-    "        \n",
-    "    return scipy.sparse.csr_matrix(res)"
+    "\n",
+    "    return scipy.sparse.csr_matrix(res) if to_dense else scipy.sparse.csr_matrix(res)"
    ]
   },
   {
@@ -700,7 +702,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The following functions are dedicated to the computation of semantic concepts, like synonyms (ideally words with high similarity) and antonyms (ideally words with low similarity).\n",
+    "The following functions are dedicated to the computation of semantic concepts, like synonyms and antonyms. Ideally, both synonyms and antonyms should be words with very high similarity values, even though the problem of finding antonyms is not as well-defined as the one of finding synonyms (however, both a synonym and an antonym of a word could be used within the same context).\n",
     "\n",
     "Moreover, the `get_analogy` method tries to solve the analogy problem: for four words in the analogical relationship $a : b = c : x$ , given the first three words, $a$, $b$ and $c$, we want to find $x$. Assume the word vector for the word $w$ is $v(w)$. To solve the analogy problem, we need to find the word vector that is most similar to the result vector of $v(c)+v(b)-v(a)$. From a geometric point of view, it boils down to finding the closest point to the vertex $v(x)$ of a parallelogram, where the other vertices are given by the vector representations of $a$, $b$ and $c$.\n",
     "\n",
@@ -789,17 +791,22 @@
     "    x = vecs[1] - vecs[0] + vecs[2]\n",
     "    if hasattr(scipy.sparse, type(x).__name__):\n",
     "        x = x.toarray()\n",
-    "    \n",
+    "\n",
     "    # Find the analogies\n",
-    "    similarity_matrix = fast_cosine_similarity(x, embedding_matrix, transpose_q=True)\n",
-    "    analogies = vec_knn(x, similarity_matrix.transpose(), word_to_idx, k=k)\n",
-    "    \n",
+    "    similarity_matrix = fast_cosine_similarity(\n",
+    "        x, embedding_matrix, transpose_q=True\n",
+    "    ).transpose()\n",
+    "    similarity_matrix[token_a_idx, 0] = -1\n",
+    "    similarity_matrix[token_b_idx, 0] = -1\n",
+    "    similarity_matrix[token_c_idx, 0] = -1\n",
+    "    analogies = vec_knn(x, similarity_matrix, word_to_idx, k=k)\n",
+    "\n",
     "    # If you have the actual token, return the actual similarity\n",
     "    actual_similarity = None\n",
     "    if token_d is not None and token_d in word_to_idx:\n",
     "        token_d_idx = word_to_idx[token_d]\n",
-    "        actual_similarity = similarity_matrix[0, token_d_idx]\n",
-    "        \n",
+    "        actual_similarity = similarity_matrix[token_d_idx, 0]\n",
+    "\n",
     "    return analogies, actual_similarity"
    ]
   },
@@ -853,6 +860,13 @@
     "            print(f\"Obtained results: {[r[0] for r in res]}\\n\\n\")\n",
     "        else:\n",
     "            print(f\"Exact analogy found with score {res[0][1]}\\n\\n\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The block below defines a number of different analogies that we will investigate in each embedding method."
    ]
   },
   {
@@ -951,12 +965,12 @@
    },
    "outputs": [],
    "source": [
-    "def co_occurrence_count(df, idx_to_word, word_to_idx, window_size=4):\n",
+    "def co_occurrence_count(df, idx_to_word, word_to_idx, col_name=\"text\", window_size=4):\n",
     "    \"\"\"\n",
     "    Builds word-word co-occurrence matrix based on word counts\n",
     "    \"\"\"\n",
     "    counts = dict()\n",
-    "    for doc in tqdm(df[\"text\"]):\n",
+    "    for doc in tqdm(df[col_name]):\n",
     "        doc_words = doc.split()\n",
     "        for doc_word_index, central_word in enumerate(doc_words):\n",
     "            central_word_index = word_to_idx[central_word]\n",
@@ -977,7 +991,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Let's test our vocabulary building method and, more importantly, if the co-occurrence count matrix is correct. To do so, we will use the previously defined toy dataframe containing just two \"documents\".\n",
+    "Let's check if the co-occurrence count matrix is correct. To do so, we will use the previously defined toy dataframe containing just two \"documents\".\n",
     "\n",
     "Given a window size of $1$ and the sorted vocabulary, we would like to get the following (densified) output:\n",
     "\n",
@@ -1144,7 +1158,9 @@
    "source": [
     "In order to visualize our embeddings, we need a way to project high-dimensional spaces into 2 dimensions: this process will obviously lead to a relevant waste of information, but it's the only way to have an approximate look at how words are represented in the embedding space. \n",
     "\n",
-    "To perform this visualization we will use two popular methods, which are `SVD` decomposition and `tSNE` (the first one being much faster than the second one)."
+    "To perform this visualization we will use two popular methods, which are `SVD` decomposition and `tSNE` (the first one being much faster than the second one):\n",
+    "- `SVD` memo: SVD stands for Singular Value Decomposition and is a kind of generalized Principal Components Analysis (PCA) which focuses on selecting the top `k` principal components.\n",
+    "- `t-SNE` memo: t-SNE stands for t-Distributed Stochastic Neighbour Embedding and is an unsupervised non-linear technique. The non-linearity is one major point of difference with PCA. Additionally, it preserves small pairwise distance (or local similarities), whereas PCA aims to preserve large pairwise distances in order to maximize variance. The basic idea of t-SNE is to compute a similarity measure between a pair of instances both at high and low dimensional space and optimize these two similarities via a cost function."
    ]
   },
   {
@@ -1288,7 +1304,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We can see that we have much less zeros w.r.t. the co-occurrence count matrix, so the sparse representation will be less effective."
+    "We can see that we have much less zeros w.r.t. the co-occurrence count matrix, so a sparse representation of the cosine similarity matrix will be less effective."
    ]
   },
   {
@@ -1365,6 +1381,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "It seems that we were able to capture a synonym: `film` and `movie`."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 202,
    "metadata": {
@@ -1398,9 +1421,24 @@
   },
   {
    "cell_type": "markdown",
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2020-11-09T11:03:12.415745Z",
+     "iopub.status.busy": "2020-11-09T11:03:12.415280Z",
+     "iopub.status.idle": "2020-11-09T11:03:12.478677Z",
+     "shell.execute_reply": "2020-11-09T11:03:12.477116Z",
+     "shell.execute_reply.started": "2020-11-09T11:03:12.415700Z"
+    }
+   },
+   "source": [
+    "It seems that we were able to capture an antonym: `good` and `bad`."
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Let's check some possible antonyms$\\dots$"
+    "Just out of curiosity, let's see what are the farthest words in space (w.r.t. cosine similarity) to `amazing` and `worst`. The obtained words should represent words that cannot be used in the same context as the input ones$\\dots$"
    ]
   },
   {
@@ -1538,7 +1576,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "As we can see, the model is not working at all at a semantic level$\\dots$ We can observe that word similarity is simply based on the frequency of words s.t.\n",
+    "As we can see, the model is not working very good at a semantic level$\\dots$ We can observe that word similarity seems to be simply based on the frequency of words s.t.\n",
     "* Two highly frequent words have high similarity value\n",
     "* Two infrequent words have very low similarity\n",
     "* Two medium frequent words have medium similarity value\n",
@@ -1711,14 +1749,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 275,
+   "execution_count": 282,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2020-11-08T13:48:14.654153Z",
-     "iopub.status.busy": "2020-11-08T13:48:14.653838Z",
-     "iopub.status.idle": "2020-11-08T13:48:15.164169Z",
-     "shell.execute_reply": "2020-11-08T13:48:15.163117Z",
-     "shell.execute_reply.started": "2020-11-08T13:48:14.654112Z"
+     "iopub.execute_input": "2020-11-08T13:52:31.102997Z",
+     "iopub.status.busy": "2020-11-08T13:52:31.102682Z",
+     "iopub.status.idle": "2020-11-08T13:52:31.611550Z",
+     "shell.execute_reply": "2020-11-08T13:52:31.610421Z",
+     "shell.execute_reply.started": "2020-11-08T13:52:31.102957Z"
     }
    },
    "outputs": [
@@ -1736,7 +1774,7 @@
     }
    ],
    "source": [
-    "utils.visualize_embeddings(ppmi_svd, words_to_highlight, word_to_idx)"
+    "utils.visualize_embeddings(ppmi_svd, words_to_highlight, word_to_idx, remove_outliers=False)"
    ]
   },
   {
@@ -2500,6 +2538,13 @@
    ],
    "source": [
     "test_analogies(glove_matrix, word_to_idx, analogies, k=10)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "As we can see from the obtained results, even though analogies are not perfectly matched at the first nearest neighbor, the actual similarity between the analogy vector and the token we are trying to \"predict\" is very very high. Moreover, if we observe the output of the analogy `man : woman = son : daughter` we can see that the 10 nearest neighbors are all related to the family concept."
    ]
   },
   {
