--- a/sentiment_analysis.ipynb
+++ b/sentiment_analysis.ipynb
@@ -1800,10 +1800,10 @@
    "source": [
     "classifier = pipeline.fit(train_corpus_nodups, train_scores_nodups)\n",
     "pred_train_scores_nodups, pred_test_scores_nodups = predict(\n",
-    "    classifier, train_corpus_nodups, test_corpus_nodups\n",
+    "    classifier, train_corpus_nodups, test_corpus\n",
     ")\n",
     "print_evaluation(\n",
-    "    classifier, test_corpus_nodups, test_scores_nodups, pred_test_scores_nodups\n",
+    "    classifier, test_corpus, test_scores, pred_test_scores_nodups\n",
     ")"
    ]
   },
