add final comments in fact checking nb

--- a/fact_checking.ipynb
+++ b/fact_checking.ipynb
@@ -1276,7 +1276,7 @@
     "\n",
     "    def __getitem__(self, index):\n",
     "        assert isinstance(index, int)\n",
-    "        claim_id = self.df.loc[index, \"id\"] \n",
+    "        claim_id = self.df.loc[index, \"id\"]\n",
     "        claim = self.df.loc[index, \"indexed_claim\"]\n",
     "        evidence = self.df.loc[index, \"indexed_evidence\"]\n",
     "        label = self.df.loc[index, \"indexed_label\"]\n",
@@ -6312,11 +6312,38 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "The aim of this notebook was to classify certain claims (given as sentences) as either being true or false (i.e. the problem is framed as binary classification one), by relying on a set of related evidences (also given as sentences), where both claims and evidences were extracted from the `fever` dataset. \n",
+    "\n",
+    "First of all, a bit of pre-processing had to be done on the sentences, in order to remove unwanted symbols (like tabs in the middle of text or final punctuation signs), get rid of unneeded information (like text between square brackets, indicating references or phonetic details) so as to reduce the overall amount of OOV words w.r.t. the embedding model we used.\n",
+    "\n",
+    "Talking about embeddings, we decided to go for `GloVe` ones with a fixed dimension of $300$ and we built $3$ different embedding matrices (one for each dataset split) in a sequential way (i.e. by not considering a word as OOV more than once). Moreover, we decided to go for a simple random embedding for OOV words, that is sampled from a normal distribution with zero mean and small standard deviation.\n",
+    "\n",
+    "Then, we built a single customizable `PyTorch` module, with parameters specifying how sentences should be encoded and how the two sentence embeddings related to claims and evidences should be merged. In particular, about sentence embeddings we implemented $4$ different baselines:\n",
+    "1. `Bag of vectors`: the sentence embedding is the mean of all token embeddings\n",
+    "2. `MLP`: the sentence embedding is obtained by the output of a FC layer, working with `max_tokens * embedding_dim` input size\n",
+    "3. `RNN last`: the sentence embedding is taken to be the last hidden/output state of an RNN\n",
+    "4. `RNN output average`: the sentence embedding is computed as the mean of all the output states of an RNN\n",
+    "\n",
+    "RNNs were implemented by leveraging standard `LSTM`s, with no dropout regularization, a single recurrent layer and a single processing direction. Losses were instead computed by binary cross-entropy (since the output of the model is a single number) and predictions were calculated by thresholding (with threshold equal to $0.5$) the output of a logistic function (i.e. sigmoid) with input the output of the model.\n",
+    "\n",
+    "About claim/evidence merging strategies instead:\n",
+    "1. `Mean`: the average of the sentence embeddings\n",
+    "2. `Sum`: the sum of the sentence embeddings\n",
+    "3. `Concatenation`: the concatenation of the sentence embeddings\n",
+    "\n",
+    "Additionally, another feature could be added to the final classifier (which has as input the merged claim/evidence pair), which represents the cosine similarity between the two sentence embeddings: we would like to see if it could improve the final evaluation.\n",
+    "\n",
+    "For each baseline, we could have decided to combine it with each claim/evidence merging strategy, but instead we trained every model with `mean` merging, while only the best performing model on the validation set was also trained with `sum` and `cat` mergings. Moreover, the best model was also trained with `mean` merging and the additional cosine similarity feature, even though it didn't seem to bring any major improvements (rather, we mostly observed the opposite behavior, where the baseline without the cosine similarity features seemed to perform better). \n",
+    "\n",
+    "About the final results, we observed that models `(1)` and `(2)` performed poorly on both the training and validation set, reaching only around $58-60\\%$ of accuracy and $50\\%$ of F1 score on the claim/evidence pair evaluation, while they were able to go as far as $50-54\\%$ of accuracy and $50\\%$ of F1 on the claim/all evidences tuple evaluation. These results clearly show that the additional complexity given by the MLP layer is not worth it: indeed, the number of parameters in model `(1)` is $\\sim 300$, while the number of parameters in model `(2)` is $\\sim 22M$, so that training model `(2)` requires much much more resources and time, even though final results are very similar and definitely not good.\n",
+    "\n",
+    "The other models, i.e `(3)` and `(4)`, were instead able to converge to better solutions. In particular, model `(4)` seems to slightly outperform model `(3)` with `mean` merging and it gives even better results with the `cat` merging strategy. Results on the validation set show that they are able to reach around $73-75\\%$ of accuracy and $72-73\\%$ of F1 on the claim/evidence evaluation, while they reach around $73-74\\%$ accuracy and $72-73\\%$ F1 on the claim/all evidences evaluation.\n",
+    "\n",
+    "Since model `(4)` with the `cat` merging strategy performed the best on the validation set, we decided to test it on the testing set and obtained comparable results, i.e. $83\\%$ of accuracy and $72\\%$ of F1 on the claim/evidence evaluation and $73\\%$ of accuracy and $72\\%$ of F1 on the claim/all evidences evaluation method."
+   ]
   }
  ],
  "metadata": {
