add credits in notebooks

--- a/fact_checking.ipynb
+++ b/fact_checking.ipynb
@@ -6344,6 +6344,20 @@
     "\n",
     "Since model `(4)` with the `cat` merging strategy performed the best on the validation set, we decided to test it on the testing set and obtained comparable results, i.e. $83\\%$ of accuracy and $72\\%$ of F1 on the claim/evidence evaluation and $73\\%$ of accuracy and $72\\%$ of F1 on the claim/all evidences evaluation method."
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Credits"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Some code blocks, especially the ones related to dataset downloading/initialization, were taken from a notebook as part of an assignment for the NLP course of the Artificial Intelligence master's degree, at University of Bologna. The cited notebook is maintained by Andrea Galassi, Federico Ruggeri and Paolo Torroni."
+   ]
   }
  ],
  "metadata": {
